k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels: 
    app: "goserver"
spec:
  containers:
    - name: goserver
      image: "italog09/hello-go:latest"
