k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  # type: ClusterIP
  # type: NodePort
  type: LoadBalancer
  ports:
  - name: goserver-service
    port: 80
    targetPort: 8000
    protocol: TCP
    # nodePort: 30001 # 30000 - 32767

# ClusterIp
# Faz um gerenciamento de portas para acessar seu service e 
# do seu service seus pods

# NodePort
# Gera um porta patrão em todos os nodes para acessar um service

# LoadBalancer
# Gerar um IP externo para acessar o seu service. É utilizado em Clud Provider
